--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,18 +4,27 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+      
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.iia.searchandfind.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.iia.searchandfind.CompassActivity"
+            android:label="@string/title_activity_compass" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
