--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,29 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-      
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 	
+    <permission
+        android:name="com.iia.searchandfind.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    
+    <!-- Required OpenGL ES 2.0. for Maps V2 -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    
+    <uses-permission android:name="com.iia.searchandfind.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    
+    <!-- Required to show current location -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -19,7 +34,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="com.iia.searchandfind.MainActivity"
+            android:name="com.iia.searchandfind.LocationActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
@@ -27,10 +42,19 @@
             android:label="@string/title_activity_compass" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Google API Key -->
+        <meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="AIzaSyBSldIXe03BXZ2M7-_A-z4J4v1OFDbsHeA" />
+        <!--  Google Map Services version -->
+        <meta-data
+		    android:name="com.google.android.gms.version"
+		    android:value="@integer/google_play_services_version" />
+
     </application>
 
 </manifest>
