--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,7 @@
         </activity>
         <activity
             android:name="com.iia.searchandfind.CompassActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_compass" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
