--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.iia.searchandfind.CompassActivity"
+            android:name="com.iia.activities.CompassActivity"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_compass" >
         </activity>
