--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 	
     <permission
@@ -68,7 +68,7 @@
         </activity>
 		
         <activity
-            android:name="com.iia.searchandfind.LocationActivity"
+            android:name="com.iia.searchandfind.UtilLocationManager"
             android:label="@string/app_name" >
         </activity>
         <activity
