--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,22 +7,22 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
-	
+
     <permission
         android:name="com.iia.searchandfind.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
-    
+
     <!-- Required OpenGL ES 2.0. for Maps V2 -->
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    
+
     <uses-permission android:name="com.iia.searchandfind.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    
+
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -33,58 +33,57 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-		<activity
+        <activity
+            android:name="com.iia.searchandfind.MainActivity"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="com.iia.activities.ListPointActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.iia.activities.NewPointActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.iia.activities.NewUserActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.iia.activities.ProfilActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="com.iia.activities.HomeActivity"
             android:label="@string/app_name" >
         </activity>
-		
-		<activity
+        <activity
             android:name="com.iia.activities.AuthenticationActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-		
         <activity
             android:name="com.iia.searchandfind.UtilLocationManager"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.iia.activities.CompassActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_compass" >
+            android:label="@string/title_activity_compass"
+            android:screenOrientation="portrait" >
         </activity>
-        
+
         <!-- Google API Key -->
         <meta-data
-		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyBSldIXe03BXZ2M7-_A-z4J4v1OFDbsHeA" />
-        <!--  Google Map Services version -->
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBSldIXe03BXZ2M7-_A-z4J4v1OFDbsHeA" />
+        <!-- Google Map Services version -->
         <meta-data
-		    android:name="com.google.android.gms.version"
-		    android:value="@integer/google_play_services_version" />
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
